--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,23 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   --color-white: #FFFFFF;
+  --color-black: #212429;
 
   --color-navy-blue: #003366;
+  --color-teal-blue: #05699E;
+  --color-mustard-yellow: #FFC107;
+
+  --color-dark-gray: #D9D9D9;
+  --color-mid-gray: #ACB5BD;
+  --color-light-gray: #DDE2E566;
+  --color-very-light-gray: #F8F9FA;
+  --color-success-green: #E6F2EC;
+  --color-mint-green: #31D0AA;
+  --color-obscure-mint-green: #4DAC96;
+  --color-error-orange: #FEECEC;
+  --color-notification-orange: #FCEDE8;
+  --color-error-red: #F03D3E;
+  --color-notification-red: #D84910;
 
   background-color: var(--color-white);
 }
