--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
   --color-navy-blue: #003366;
   --color-teal-blue: #05699E;
   --color-mustard-yellow: #FFC107;
+  --color-teal-yellow:#FFC107CC;
+  --color-mono-gray:#505050;
+
 
   --color-dark-gray: #D9D9D9;
   --color-mid-gray: #ACB5BD;
