--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", "Roboto", "DM Sans", sans-serif;
 
+  /*
+    Colors
+  */
   --color-white: #FFFFFF;
   --color-black: #212429;
 
@@ -21,4 +24,39 @@
   --color-notification-red: #D84910;
 
   background-color: var(--color-white);
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 38px;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 28px;
+  font-weight: 500;
+}
+
+h4 {
+  font-size: 21px;
+  font-weight: 500;
+}
+
+h5 {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+small {
+  font-size: 10px;
+  font-weight: 400;
 }
