Implementacion de los componentes button, textCard y card. Aun falta contemplar las variantes con iconos

--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -21,6 +21,12 @@
   color: white;
 }
 
+.alternative-card{
+  border: none;
+  background-color: var(--color-light-gray);
+  color: var(--color-black);
+}
+
 .secondary {
   background-color: var(--color-dark-gary);
   color: var(--color-mono-gray);
