--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --color-white: #FFFFFF;
   --color-black: #212429;
 
+  --color-black2:#000;
+
   --color-navy-blue: #003366;
   --color-teal-blue: #05699E;
   --color-mustard-yellow: #FFC107;
