--- a/src/components/css/x-textcard.css
+++ b/src/components/css/x-textcard.css
@@ -2,12 +2,11 @@
   width: 292px;
   min-height: 191px;
   padding: 20px 28px;
-  border-radius: 8px;
   background-color: var(--color-light-gray);
   display: flex;
   flex-direction: column;
   gap: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 8px var(--color-mid-gray);
 }
 
 .text-card-title {
