--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
   --color-mustard-yellow: #FFC107;
   --color-teal-yellow:#FFC107CC;
   --color-mono-gray:#505050;
+  --color-blue-ligth:#0C14A74D;
+  --color-blue:#0C14A7;
 
 
   --color-dark-gray: #D9D9D9;
