--- a/src/components/css/x-button.css
+++ b/src/components/css/x-button.css
@@ -3,6 +3,7 @@
   height: 49px;
   padding: 15px 60px;
   font-size: 16px;
+  font-family: 'Roboto';
   cursor: pointer;
   transition: background-color 0.3s ease;
   display: flex;
