--- a/src/components/css/x-card.css
+++ b/src/components/css/x-card.css
@@ -31,12 +31,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  font-size: 16px;
+  font-family: 'Roboto';
 }
 
 .card-title {
   margin: 0;
-  font-size: 1.25rem;
-  font-weight: bold;
+  font-size: 21px;
+  font-family: 'Montserrat';
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
