--- a/src/components/css/x-textcard.css
+++ b/src/components/css/x-textcard.css
@@ -11,14 +11,15 @@
 
 .text-card-title {
   margin: 0;
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 21px;
+  font-family: 'Montserrat';
   color: var(--color-black2);
 }
 
 .text-card-description {
   margin: 0;
-  font-size: 1rem;
+  font-family: 'Roboto';
+  font-size: 12px;
   color: var(--color-dark-gray);
   flex-grow: 1;
 }
