--- a/src/components/css/x-textcard2.css
+++ b/src/components/css/x-textcard2.css
@@ -19,11 +19,12 @@
 }
 
 .text-card2-icon {
-  margin-bottom: 12px;
+  margin-bottom: -20px;
 }
 
 .text-card2-description {
-  font-size: 16px;
-  color: var(--color-blue);
+  font-size: 28px;
+  font-family: 'Montserrat';
+  color: var(--color-navy-blue);
   line-height: 1.4;
 }
