--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   */
   --color-white: #FFFFFF;
   --color-black: #212429;
-
+  --color-dark: #0A142F;
   --color-black2: #000;
 
   --color-navy-blue: #003366;
