--- a/src/components/css/x-header.css
+++ b/src/components/css/x-header.css
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: var(--color-navy-blue);
     color: var(--color-white);
-    width: 100%;
+    width: 100vw;
     padding: 10px 10px;
 }
 
