--- a/src/components/css/x-input.css
+++ b/src/components/css/x-input.css
@@ -1,7 +1,3 @@
-:host {
-    display: inline-block;
-}
-
 .input-container {
     display: flex;
     flex-direction: column;
@@ -15,19 +11,23 @@
 }
 
 .input-field {
-    padding: 20px 20px;
-    font-family: "Roboto";
+    padding: 16px;
+    font-family: "Roboto", sans-serif;
     font-size: 21px;
+    font-weight: normal;
     border: 1px solid var(--color-black);
     border-radius: 8px;
     background-color: var(--color-white);
     outline: none;
     box-sizing: border-box;
+    min-width: 0;
+    /* Asegura que no tenga un ancho mínimo por defecto que impida que se encoja */
 }
 
 .input-field::placeholder {
     color: #E1E1E1;
     font-weight: 500;
+    /* Esto significa que el placeholder tiene un peso diferente */
 }
 
 .input-field:focus {
