--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 #root {
     justify-items: center;
-    margin: 0px;
+    margin: 0 auto;
+    padding: 0;
+    overflow: auto;
+}
+
+body{
+  margin: 0px;
 }
