--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 :root {
   font-family: "Montserrat", "Roboto", "DM Sans", sans-serif;
-  margin: 0px;
-  width: 100%;
 
   /*
     Colors
@@ -36,8 +34,9 @@
 
 body {
   margin: 0;
-  display: flex;
-  justify-content: center;
+  min-width: 1440px;
+  min-height: 100vh;
+  width: 100%; 
 }
 
 h1 {
